--- a/.abf.yml
+++ b/.abf.yml
@@ -1,6 +1,6 @@
 sources:
-  "cyrillic-bin.tar.xz": 20b953836bc57be7882bedd0282d00aa9b12eb11
-  "cyrillic-bin.x86_64-linux.tar.xz": d293b8cccfbb2f65868c5989f04dca7f9192a13e
-  "cyrillic.doc.tar.xz": bd12131ff57fec190bf97197ca4f8bf4c6c7e05f
-  "cyrillic.source.tar.xz": c5d23fdc926420d186c528d5a18fd314cd66f978
-  "cyrillic.tar.xz": 20b775da186c5205c02ed6635387d3123f08dae8
+  cyrillic-bin.tar.xz: b0d10e473d077601f2bb9400f525702ca6ddf5dd
+  cyrillic-bin.x86_64-linux.tar.xz: 5c8ef46d464667efa8558f2261625409328cb116
+  cyrillic.doc.tar.xz: bd12131ff57fec190bf97197ca4f8bf4c6c7e05f
+  cyrillic.source.tar.xz: c5d23fdc926420d186c528d5a18fd314cd66f978
+  cyrillic.tar.xz: 20b775da186c5205c02ed6635387d3123f08dae8
