--- a/.abf.yml
+++ b/.abf.yml
@@ -1,4 +1,4 @@
 sources:
-  cyrillic.doc.tar.xz: 004084597b8090bb32837a778098c1233bfd3d71
-  cyrillic.source.tar.xz: 0e4af17f6480e7a6045d38bb718b33273588876f
-  cyrillic.tar.xz: 2228519817a233854385125ecd9493abba72c339
+  cyrillic.doc.r63613.tar.xz: d4a86d1ef660abd0bcdfb7ad7336a02128a70e87
+  cyrillic.r63613.tar.xz: 26a4bf4de1960dd8f177eb6af85316605b8f531e
+  cyrillic.source.r63613.tar.xz: c15bba4b12b83814e46da6fe51df8ac279c7d554
